--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -6,7 +6,7 @@ spring.servlet.multipart.max-request-size=10GB
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${MYSQL_USER}
 spring.datasource.password=${MYSQL_PASSWORD}
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
